--- a/estilos.css
+++ b/estilos.css
@@ -1,9 +1,118 @@
-body {
-    background: beige;
-}
-#cuadrado {
-    width: 50px;
+#personaje1 {
+    width: 20px;
     height: 50px;
     background-color: blue;
-    position: relative;
+    position: absolute;
+}
+/* pantallajuego1 */
+.estructura{
+    background-color: rgb(139, 101, 28);
+}
+#suelo1-1 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 50px;
+}
+#suelo1-2 {
+    position: absolute;
+    bottom: 150px;
+    left: 400px;
+    width: 100%;
+    height: 20px;
+}
+
+/**/
+body{
+    background-color: beige;
+    font-family: 'Arial', sans-serif;
+}
+#pantalla {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    text-align: center;
+  }
+  
+  h1 {
+    font-size: 3rem;
+    margin-bottom: 2rem;
+    text-align: center;
+    color: #2c3e50;
+    text-shadow: 1px 1px #fff;
+  }
+  
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  li {
+    margin-bottom: 1rem;
+  }
+  
+  button {
+    
+    background-color: #3498db;
+    border: none;
+    color: white;
+    padding: 1rem 2rem;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 1.5rem;
+    border-radius: 5px;
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.3);
+    transition: all 0.2s ease-in-out;
+    cursor: pointer;
+  }
+  
+  button:hover {
+    background-color: #2980b9;
+    transform: scale(1.1);
+  }
+  
+  button:active {
+    box-shadow: none;
+    transform: translateY(2px);
+  }
+  /*radio form*/
+.dificultad-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 2rem;
+  }
+  
+  input[type="radio"] {
+    appearance: none;
+    -webkit-appearance: none;
+    width: 2rem;
+    height: 2rem;
+    border-radius: 50%;
+    border: 2px solid #ccc;
+  }
+  
+  input[type="radio"]:checked {
+    background-color: #3498db;
+    border-color: #3498db;
+  }
+  
+  label {
+    font-size: 1.5rem;
+    cursor: pointer;
+  }
+  form label {
+    text-align: right;
+    display: inline-block;
+    width: 100px; /* ajusta el ancho según tus necesidades */
+    margin-right: 10px; /* añade un margen entre el texto y el input */
+  }
+  #boton-form{
+    margin-top: 2rem;
   }
